Add eventMap() method to InMemoryAppender (#445)
* This method is copied from kiwi-beta, which has its own
  InMemoryAppender class. Eventually, this class can be made
  public and supersede that one.
* Change from collect(toList()) in orderedEvents and
  orderedEventMessages to toList() as the terminal method.
  The returned lists should not be modifiable.